# neoterm-tools

./: Makefile.am  README.md  configure.ac  init-termux-properties.sh.in  neoterm-login.sh.in  neoterm.properties
.github/workflows/: build.yml
doc/: Makefile.am  neoterm.1.md.in
mirrors/: Makefile.am  default
mirrors/asia/: linux.domainesia.com  mirror.albony.xyz  mirror.bardia.tech  mirror.freedif.org  mirror.nevacloud.com  mirror.textcord.xyz  mirrors.cbrx.io  mirrors.nguyenhoang.cloud  tmx.xvx.my.id
mirrors/china/: mirror.iscas.ac.cn  mirror.nyist.edu.cn  mirror.sjtu.edu.cn  mirrors.aliyun.com  mirrors.bfsu.edu.cn  mirrors.cqupt.edu.cn  mirrors.nju.edu.cn  mirrors.pku.edu.cn  mirrors.qvq.net.cn  mirrors.sau.edu.cn  mirrors.sdu.edu.cn  mirrors.sustech.edu.cn  mirrors.tuna.tsinghua.edu.cn  mirrors.ustc.edu.cn  mirrors.zju.edu.cn
mirrors/europe/: ftp.fau.de  grimler.se  is.mirror.flokinet.net  md.mirrors.hacktegic.com  mirror.accum.se  mirror.autkin.net  mirror.bouwhuis.network  mirror.leitecastro.com  mirror.mwt.me  mirror.sunred.org  mirror.termux.dev  mirrors.cfe.re  mirrors.medzik.dev  mirrors.sahilister.in  neoterm.3san.dev  neoterm.astra.in.ua  neoterm.cdn.lumito.net  neoterm.librehat.com  neoterm.mentality.rip  packages.termux.dev  ro.mirror.flokinet.net
mirrors/north_america/: dl.kcubeterm.com  mirror.csclub.uwaterloo.ca  mirror.fcix.net  mirror.mwt.me  mirror.quantum5.ca  mirror.vern.cc  mirrors.utermux.dev  plug-mirror.rcac.purdue.edu
mirrors/oceania/: mirror.endianness.com
mirrors/russia/: mirror.mephi.ru  repository.su
mirrors/south_america/: mirrors.rda.run
motds/: Makefile.am  motd-playstore  motd.sh.in
scripts/: Makefile.am  chsh.in  dalvikvm.in  login.in  neoterm-backup.in  neoterm-change-repo.in  neoterm-fix-shebang.in  neoterm-info.in  neoterm-open-url.in  neoterm-open.in  neoterm-reload-settings.in  neoterm-reset.in  neoterm-restore.in  neoterm-setup-package-manager.in  neoterm-setup-storage.in  neoterm-wake-lock.in  neoterm-wake-unlock.in  pkg.in  su.in
